--- a/HTML5App1/Html/index.html
+++ b/HTML5App1/Html/index.html
@@ -188,12 +188,19 @@
       <div class="right-panel" id="dynamic">
       </div>
     </script>
+    <scipt id="/html/taskmanager.html" type="text/template">
+      <div id="taskbar">
+        <img class="setting" fm-click="open()" src="/img/settings.jpg">
+          <span fm-hide="!totalCol" style="margin-left:45%">
+            <span fm-bind="colNumber"></span>/<span fm-bind="totalCol"></span>
+          </span>
+        </div>
+    </scipt>
   </head>
   <body>
     <div id="main" style="height:100%">
       <div id="view">
       </div>
-      <div id="taskmanager"  ></div>
     </div>
     <script type="text/javascript">
       jQuery.support.cors = true;
