--- a/HTML5App1/Html/index.html
+++ b/HTML5App1/Html/index.html
@@ -47,8 +47,7 @@
       <div style="overflow:hidden;">
 	      <div fm-name='articleContainer' id="articleContainer">
 	      </div>
-	      <br style="clear:both" />
-        <div id="taskmanager" ></div>
+         <div id="taskmanager" ></div>
       </div>
     </script>
     <script id="/html/article.html" type="text/template">
@@ -63,8 +62,8 @@
       </div>
     </script>
     <script id="/html/articles.html" type="text/template">
-      <div id="article-list" style="height: 90%; width: 98%;">
-         <div style="width: 100%;">
+      <div id="article-list" style="height: 90%; width: 100%;">
+         <div>
             <h2 fm-bind="articles.title"></h2>
             <div style="overflow:auto" fm-name="articleMove">
                 <div fm-repeat="item in articles.items">
@@ -193,18 +192,16 @@
     <script id="/html/taskmanager.html" type="text/template">
       <div id="taskbar">
         <img class="setting" fm-click="open()" src="/img/settings.jpg" />
-          <span fm-hide="!totalCol" style="margin-left:45%">
+          <span fm-hide="!totalCol" style="margin-left:42%; font-size:.8em;">
             <span fm-bind="colNumber"></span>/<span fm-bind="totalCol"></span>
           </span>
         </div>
     </script>
   </head>
   <body>
-    <div id="main" style="height:100%">
-      <div id="view">
+       <div id="view">
       </div>
-    </div>
-    <script type="text/javascript">
+     <script type="text/javascript">
       jQuery.support.cors = true;
       fm.Include("com.reader.Reader");
     </script>
