--- a/HTML5App1/Html/index.html
+++ b/HTML5App1/Html/index.html
@@ -35,12 +35,13 @@
       .left-panel .items{
       padding: 5px 0 0 20px;
       vertical-align: middle;
-      font-size:28px;
+      font-size:22px;
       line-height:45px
       }
       .left-panel .items a{
       text-decoration: none;
       display: inline-block;
+      width: 100%;
       }
       .right-panel .vertical-news-container{
       cursor: pointer;
@@ -103,6 +104,22 @@
     </script>
     <script id="/html/settings.html" type="text/template">
       <div id="settingPopup" class="setting-popup">
+        <div fm-click="close()" style="
+          padding: 10px;
+          margin-top:-10px;
+          margin-right:-10px;
+          shadow:0 0 10px #ccc;
+          box-shadow: 1px 1px 5px 1px #3C0D0D;
+          float:right;
+          text-shadow: 0px 1px #ccc;
+          color: white;
+          background: red;
+          height: 9px;
+          border-radius: 15px;
+          width: 9px;
+          font-size: 19px;
+          line-height: 5px;">x</div>
+        <div class="clearboth"></div>
         <ul>
           <li>
             <div>FONT SIZE</div>
@@ -126,10 +143,11 @@
           </li>
         </ul>
         <br class='clearboth' />
+        <br class='clearboth' />
           <ul>
             <li>
               <div>COLOR MODE</div>
-              <br class='clearboth'>
+              <br class='clearboth' />
                 <div>
                   <div fm-click="applyColors({color:'black','background-color':'white'})" class="color_mode black_white">
                     White
@@ -143,26 +161,29 @@
                 </div>
               </li>
           </ul>
-          <div style="text-align: right; margin-right:10%;margin-top: 19px;">
-            <button style="padding: 3px 15px;
-      border-radius: 3px;" fm-click="close()">Close</button>
-          </div>
+        <br/>
+        <br/>
+        <br/>
         </div>
     </script>
     <script id="/html/sources.html" type="text/template">
       <div>
-        <div style="line-height:50px; padding:0 10px;">
+        <div class="header-class main">
             <img style="max-height:40px" src="/cr1.png" />
-            <a style="font-size:16px; float:right; text-decoration:none;line-height:30px; margin-right:30px;" href="#/editfeed">+add</a>
+            <a class="home-header" style="font-size:22px; float:right; margin-right:30px;" href="#/editfeed">
+              <span class="add-plus">+</span><span class="add-text">Add</span></a>
         </div>
         <div style="overflow:auto;" fm-name="sourceListCont">
-          <div fm-repeat="item in sources.items">
-            <div class="items">
+          <div class="source-item-list" fm-repeat="item in sources.items">
+            <div class="items no-text-wrap">
               <a fm-href="#/source/{{item.id}}">
                 <img style="max-width:30px; min-width:20px;" fm-src='{{item.thumbnail}}' />
                 <span fm-hide="hideText" fm-bind="item.name"></span>
               </a>
             </div>
+          </div>
+          <div fm-show="sources.items.length==0" style="text-align:center;margin-top:40%;">
+            <a style="font-size:30px; text-decoration:none;line-height:30px;" href="#/editfeed">Click to (+)Add Feed Source</a>
           </div>
         </div>
       </div>
@@ -202,7 +223,6 @@
     </script>
     <script id="/html/newslist.view.html" type="text/template">
       <div class="right-panel" id="dynamic">
-        <div class="loading">Loading ...</div> 
       </div>
     </script>
     <script id="/html/taskmanager.html" type="text/template">
@@ -215,15 +235,15 @@
     </script>
     <script id="/html/addfeeds.html" type="text/template">
       <div>
-        <div style="line-height:30px;">Select from list</div>
+        <div class="header-class"><h1>Select from List</h1></div>
         <form>
           <div style="overflow-y:auto;width:100%;overflow-x:hidden" fm-name="feedlistContainer">
             <ul  fm-repeat="feeds in FeedList" >
-              <li>
-                  <span class="type-head"  fm-bind="'#' + index"></span>
+              <li class="type-head">
+                  <span  fm-bind="index"></span>
               </li>
-              <li class="feedlistitem" fm-repeat="feed in feeds">
-                <label class="no-text-wrap">
+              <li class="feedlistitem source-item-list" fm-repeat="feed in feeds">
+                <label class="no-text-wrap full-width-height">
                   <input type="checkbox" fm-checked="isInList(feed)" fm-value="feed.inlist" />
                   <img width="20" fm-src='{{feed.thumbnail}}' />
                   <span fm-bind="feed.name"></span>
@@ -236,6 +256,7 @@
     </script>
     <script id="/html/editfeed.view.html" type="text/template">
       <div id="editfeed">
+        
       </div>
     </script>
   </head>
@@ -244,7 +265,7 @@
       </div>
      <script type="text/javascript">
       jQuery.support.cors = true;
-      fm.Include("com.reader.Reader-min");
+      fm.Include("com.reader.Reader");
     </script>
   </body>
 </html>
