--- a/HTML5App1/Html/addfeeds.html
+++ b/HTML5App1/Html/addfeeds.html
@@ -1,15 +1,30 @@
 <div>
   <div class="header-class">
-    <h1>Select from List</h1>
+    <h1 style="display:inline-block">Select from List</h1>
     <span fm-click="addFeed()">add</span>
   </div>
   <form>
     <div style="overflow-y:auto;width:100%;overflow-x:hidden" fm-name="feedlistContainer">
-      <ul  fm-repeat="feeds in FeedList" >
+      <input placeholder="Search " class="query-input"  fm-name="query" />
+      <ul fm-hide="isEmpty(feeds)"  fm-repeat="feeds in FeedList" >
         <li class="type-head">
           <span  fm-bind="index"></span>
+          <div fm-click="remove(feeds, index)" style="
+          padding: 10px;
+          margin-right:10px;
+          shadow:0 0 10px #ccc;
+          box-shadow: 1px 1px 5px 1px #3C0D0D;
+          float:right;
+          text-shadow: 0px 1px #ccc;
+          color: white;
+          background: #ccc;
+          height: 9px;
+          border-radius: 15px;
+          width: 9px;
+          font-size: 19px;
+          line-height: 5px;">x</div>
         </li>
-        <li class="feedlistitem source-item-list" fm-repeat="feed in feeds">
+        <li class="feedlistitem source-item-list" fm-repeat="feed in feeds|filter:filter(feed)">
           <label class="no-text-wrap full-width-height">
             <input type="checkbox" fm-checked="isInList(feed)" fm-value="feed.inlist" />
             <img width="20" fm-src='{{feed.thumbnail}}' />
