--- a/HTML5App1/Html/addfeedsource.html
+++ b/HTML5App1/Html/addfeedsource.html
@@ -1,14 +1,16 @@
 <div  class="newFeedForm">
     <ul>
-      <li>
-        <lable>
-          <input placeholder="Search" fm-name="name"/>
-        </lable>
-      </li>
-      <li>
-        <lable>
-          <input type="submit" value="Submit" fm-name="submit"/>
-        </lable>
+      <li style="position:relative;margin-top:10px; margin-bottom: 10px">
+          <input autofocus="true" class="query-input" placeholder="Search" fm-name="name"/>
+          <input type="submit" class="searchlist btn-sm btn" value="Search" fm-name="submit"/>
       </li>
     </ul>
+  <div class="source-item-list" fm-repeat="item in results">
+    <div class="items no-text-wrap">
+      <a fm-click="save(item)">
+        <img style="max-width:30px; min-width:20px;" fm-src='{{"http://www.google.com/s2/favicons?domain=" + encodeURIComponent(item.website)}}' />
+        <span fm-bind="item.title"></span>
+      </a>
+    </div>
+  </div>
 </div>
