--- a/HTML5App1/Html/index.html
+++ b/HTML5App1/Html/index.html
@@ -32,13 +32,13 @@
        
     </script>
     <style type="text/css">
-      .left-panel .items{
+      .items{
       padding: 5px 0 0 20px;
       vertical-align: middle;
       font-size:22px;
       line-height:45px
       }
-      .left-panel .items a{
+      .items a{
       text-decoration: none;
       display: inline-block;
       width: 100%;
