--- a/HTML5App1/Html/sources.html
+++ b/HTML5App1/Html/sources.html
@@ -13,7 +13,7 @@
               </a>
             </div>
           </div>
-          <div fm-show="sources.items.length==0" style="text-align:center;margin-top:40%;">
+          <div fm-name="addInfo" style="text-align:center;margin-top:40%;display:none;">
             <a style="font-size:30px; text-decoration:none;line-height:30px;" href="#/editfeed">Click to (+)Add Feed Source</a>
           </div>
         </div>
