--- a/HTML5App1/Html/sources.html
+++ b/HTML5App1/Html/sources.html
@@ -2,7 +2,7 @@
         <div class="header-class main">
             <img style="max-height:40px" src="/cr1.png" />
             <a class="home-header" style="font-size:22px; float:right; margin-right:10px;" href="#/editfeed">
-              <span class="add-plus">+</span><span class="add-text">Add</span></a>
+              <span class="add-plus">+</span><span class="add-text">add</span></a>
         </div>
         <div style="overflow:auto;" fm-name="sourceListCont">
           <div class="source-item-list" fm-repeat="item in sources.items">
