--- a/HTML5App1/Html/addfeeds.html
+++ b/HTML5App1/Html/addfeeds.html
@@ -1,7 +1,8 @@
 <div>
   <div class="header-class">
     <h1 style="display:inline-block">Select from List</h1>
-    <span fm-click="addFeed()">add</span>
+    <a class="home-header" style="font-size:22px; float:right; margin-right:10px;" href="#/addfeedsource">
+              <span class="add-plus">+</span><span class="add-text">add</span></a>
   </div>
   <form>
     <div style="overflow-y:auto;width:100%;overflow-x:hidden" fm-name="feedlistContainer">
@@ -9,7 +10,7 @@
       <ul fm-hide="isEmpty(feeds)"  fm-repeat="feeds in FeedList" >
         <li class="type-head">
           <span  fm-bind="index"></span>
-          <div fm-click="remove(feeds, index)" style="
+       <!--   <div fm-click="remove(feeds, index)" style="
           padding: 10px;
           margin-right:10px;
           shadow:0 0 10px #ccc;
@@ -22,7 +23,7 @@
           border-radius: 15px;
           width: 9px;
           font-size: 19px;
-          line-height: 5px;">x</div>
+          line-height: 5px;">x</div>-->
         </li>
         <li class="feedlistitem source-item-list" fm-repeat="feed in feeds|filter:filter(feed)">
           <label class="no-text-wrap full-width-height">
