--- a/HTML5App1/Html/addfeedsource.html
+++ b/HTML5App1/Html/addfeedsource.html
@@ -5,12 +5,14 @@
           <input type="submit" class="searchlist btn-sm btn" value="Search" fm-name="submit"/>
       </li>
     </ul>
-  <div class="source-item-list" fm-repeat="item in results">
-    <div class="items no-text-wrap">
-      <a fm-click="save(item)">
-        <img style="max-width:30px; min-width:20px;" fm-src='{{"http://www.google.com/s2/favicons?domain=" + encodeURIComponent(item.website)}}' />
-        <span fm-bind="item.title"></span>
-      </a>
+    <div style="overflow-y:auto;" fm-name="listcontainer">
+      <div class="source-item-list" fm-repeat="item in results">
+        <div class="items no-text-wrap">
+          <a fm-click="save(item)">
+            <img style="max-width:30px; min-width:20px;" fm-src='{{"http://www.google.com/s2/favicons?domain=" + encodeURIComponent(item.website)}}' />
+            <span fm-bind="item.title"></span>
+          </a>
+        </div>
     </div>
-  </div>
+    </div>
 </div>
