--- a/HTML5App1/Html/addfeedsource.html
+++ b/HTML5App1/Html/addfeedsource.html
@@ -5,6 +5,7 @@
           <input type="submit" class="searchlist btn-sm btn" value="Search" fm-name="submit"/>
       </li>
     </ul>
+    <div style="margin-left:30px;" fm-name="info">Search Site, Topic...</div>
     <div style="overflow-y:auto;" fm-name="listcontainer">
       <div class="source-item-list" fm-repeat="item in results">
         <div class="items no-text-wrap">
