--- a/HTML5App1/Html/index.html
+++ b/HTML5App1/Html/index.html
@@ -21,7 +21,7 @@
     <link type="text/css" rel="stylesheet" href='/css/reader.css' />
     <script type="text/javascript" src="/js/jquery.js"></script>
     <script type="text/javascript" src="/js/jquery-swipe.js"></script>
-    <script type="text/javascript" src="/js/jsfm.js"></script>
+    <script type="text/javascript" src="/contjs/jsfm-min.js"></script>
     <script>
 
       $(document).on('click', 'a', function(){ 
@@ -67,9 +67,12 @@
        <div id="view">
       </div>
      <script type="text/javascript">
-       fm.basedir = '/js/src';
+       fm.basedir = '/contjs/src';
+       function NOTIFY(a){
+		      window.external.notify(a);
+	     }
        jQuery.support.cors = true;
-       //fm.isMinified=true;
+       fm.isMinified=true;
        fm.Include("com.reader.Reader");
        
      </script>
