--- a/HTML5App1/Html/index.html
+++ b/HTML5App1/Html/index.html
@@ -21,12 +21,12 @@
     <link type="text/css" rel="stylesheet" href='/css/reader.css' />
     <script type="text/javascript" src="/js/jquery.js"></script>
     <script type="text/javascript" src="/js/jquery-swipe.js"></script>
-    <script type="text/javascript" src="/contjs/jsfm-min.js"></script>
+    <script type="text/javascript" src="/js/jsfm.js"></script>
     <script>
-
       $(document).on('click', 'a', function(){ 
       if( this.getAttribute('href') && this.getAttribute('href').indexOf('http') != -1 ){
-        return false;
+      //window.open(this.getAttribute('href'), "_blank");
+      return false;
       }
       });
 
@@ -36,7 +36,30 @@
       padding: 5px 0 0 20px;
       vertical-align: middle;
       font-size:22px;
-      line-height:45px
+      line-height:45px;
+      }
+      .ImageShow{
+      height: 100px;
+      float:right;
+      width: 100px;
+      margin: 10px;
+      }
+      .ImageShow img{
+      float: right;
+      }
+      
+      .imageView{
+      background: #ccc;
+      opacity: 1;
+      z-index: 99999;
+      position: fixed;
+      top:0;
+      left:0;
+      }
+      .imageView img{
+        max-width: 94%;
+        max-height: 94%;
+        margin: 3%;
       }
       .items a{
       text-decoration: none;
@@ -56,9 +79,9 @@
       overflow:hidden !important;
       }
       $(document).ready(function(){
-        $("html").scroll(function(){
-          return false;
-        });
+      $("html").scroll(function(){
+      return false;
+      });
       });
 
     </style>
@@ -67,12 +90,12 @@
        <div id="view">
       </div>
      <script type="text/javascript">
-       fm.basedir = '/contjs/src';
+       fm.basedir = '/js/src';
        function NOTIFY(a){
 		      window.external.notify(a);
 	     }
        jQuery.support.cors = true;
-       fm.isMinified=true;
+      // fm.isMinified=true;
        fm.Include("com.reader.Reader");
        
      </script>
